# global-emissions-analysis

./: README.md  cleaned_co2_data_enriched.csv  dashboard.py  data_cleaning.ipynb  data_enrichement.ipynb  eda.ipynb  explanatory_analysis.ipynb  final_trimmed_co2_data.csv  pyproject.toml  requirements.txt
